_sass/components/Workplace.scss
.Workplace {
  padding: 60px 10px;

  @media ($tablet) {
    padding-bottom: 130px;
    padding-top: 130px;
  }

  &__culture {
    padding-bottom: 60px;
    padding-top: 20px;

    @media ($tablet) {
      padding-bottom: 100px;
    }
  }

  &__benefits {
    padding-top: 40px;

    @media ($tablet) {
      padding-top: 80px;
    }
  }

  &__office {
    left: 50%;
    padding-bottom: 60px;
    position: relative;
    transform: translateX(-50%);
    width: 100vw;

    @media ($tablet) {
      padding-bottom: 100px;
      width: 100%;
    }
  }
}

